external-crates/move/crates/move-compiler/tests/move_2024/typing/index_underspecified.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04007]: incompatible types
   ┌─ tests/move_2024/typing/index_underspecified.move:13:5
   │
12 │ public fun index_by_reference<T: store>(table: &mut Table<u64, T>) {
   │                                                           --- Expected: 'u64'
13 │     table[&1].push_back(3);
   │     ^^^^^^^^^
   │     │     │
   │     │     Given: '&{integer}'
   │     Invalid call of 'a::m::borrow'. Invalid argument for parameter '_k'
